Update the style to the message of PermissionDialog
Test: manual, screenshot
Bug: 183006767
Bug: 174495520
Change-Id: I6741d55d9f62f227415c3f1b96294bbd65600bf6
Merged-In: I6741d55d9f62f227415c3f1b96294bbd65600bf6

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -39,7 +39,12 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="PermissionAlertDialogTitle"
+           parent="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle">
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+    </style>
 </resources>
