Introduce ViewModel for PhotoPicker
Use MVVM architecture for PhotoPicker. Added a new class GridViewModel.

Bug: 168001592
Test: Manual, Verified that PhotoPickerApp is able to select images from
list of images

Change-Id: I202a3a5f8a462d55c5e72828c2ae70929a8064d2

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,6 +16,9 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <style name="AppTheme" parent="Theme.AppCompat">
+    </style>
+
     <style name="PickerDialogTheme"
            parent="@android:style/Theme.DeviceDefault.Light.Dialog.Alert">
         <item name="android:windowNoTitle">true</item>
