--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -28,6 +28,9 @@
     <dimen name="picker_bottom_bar_elevation">8dp</dimen>
     <dimen name="picker_item_check_size">24dp</dimen>
     <dimen name="picker_item_check_margin">6dp</dimen>
+    <dimen name="picker_item_badge_margin">5dp</dimen>
+    <dimen name="picker_item_badge_text_margin">3dp</dimen>
+    <dimen name="picker_item_badge_text_size">10dp</dimen>
 
     <!-- PhotoPicker Preview -->
     <dimen name="preview_buttons_margin_horizontal">16dp</dimen>
