--- a/res/layout/item_photo_grid.xml
+++ b/res/layout/item_photo_grid.xml
@@ -29,9 +29,7 @@
         android:elevation="0dp"
         android:duplicateParentState="true"
         app:cardElevation="0dp"
-        app:cardCornerRadius="0dp"
-        app:strokeWidth="1dp"
-        app:strokeColor="?android:strokeColor">
+        app:cardCornerRadius="0dp">
 
         <com.android.providers.media.photopicker.ui.SquareImageView
             android:id="@+id/icon_thumbnail"
@@ -41,5 +39,15 @@
             android:contentDescription="@null"/>
 
     </com.google.android.material.card.MaterialCardView>
+
+    <ImageView
+        android:id="@+id/icon_check"
+        android:layout_height="@dimen/picker_item_check_size"
+        android:layout_width="@dimen/picker_item_check_size"
+        android:layout_marginStart="@dimen/picker_item_check_margin"
+        android:layout_marginTop="@dimen/picker_item_check_margin"
+        android:src="@drawable/picker_item_check"
+        android:layout_gravity="top|left"
+        android:scaleType="fitCenter"/>
 
 </FrameLayout>
