--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -53,7 +53,7 @@
     <style name="PickerDefaultTheme" parent="@style/Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Color section -->
         <item name="android:colorBackground">@color/picker_background_color</item>
-        <item name="android:strokeColor">@color/picker_hairline_color</item>
+        <item name="android:colorAccent">@color/picker_primary_color</item>
 
         <!-- System | Widget section -->
         <item name="android:statusBarColor">?android:colorBackground</item>
