--- a/res/layout/fragment_preview.xml
+++ b/res/layout/fragment_preview.xml
@@ -13,30 +13,27 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/preview_imageView"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+
+    <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:id="@+id/preview_viewPager"
+        android:layout_gravity="center"/>
 
     <Button
         android:id="@+id/preview_add_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/add"
-        android:textAllCaps="false"
+        android:layout_gravity="center_horizontal|bottom"
         android:layout_marginHorizontal="@dimen/preview_buttons_margin_horizontal"
         android:layout_marginBottom="@dimen/preview_buttons_margin_bottom"
         android:backgroundTint="@color/preview_add_button_background_color"
+        android:text="@string/add"
+        android:textAllCaps="false"
         android:textColor="@color/preview_buttons_text_color"
-        android:textSize="@dimen/preview_buttons_text_size"
-    />
-
-</LinearLayout>
+        android:textSize="@dimen/preview_buttons_text_size"/>
+</FrameLayout>
