Add toggle button in the UI to test work profile integration
This is only for prototyping purposes and will be replaced when UI is
finalised.
Do not show the toggle switch if there is only one user profile for this
user. Show toggle switch as on when accessing via work profile.

Bug: 188394433
Test: Manual, see screen recording on the bug
Change-Id: I29c294eb9bf4222524f86079d60af5beabfbe317

--- a/res/layout/activity_photo_picker.xml
+++ b/res/layout/activity_photo_picker.xml
@@ -35,6 +35,13 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <Switch
+        android:visibility="gone"
+        android:text="Work Profile"
+        android:id="@+id/workprofile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
