--- a/res/layout/fragment_preview.xml
+++ b/res/layout/fragment_preview.xml
@@ -15,6 +15,7 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:background="@color/preview_default_black"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
@@ -24,16 +25,36 @@
         android:id="@+id/preview_viewPager"
         android:layout_gravity="center"/>
 
-    <Button
-        android:id="@+id/preview_add_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
+    <FrameLayout
         android:layout_marginHorizontal="@dimen/preview_buttons_margin_horizontal"
+        android:layout_gravity="bottom"
         android:layout_marginBottom="@dimen/preview_buttons_margin_bottom"
-        android:backgroundTint="@color/preview_add_button_background_color"
-        android:text="@string/add"
-        android:textAllCaps="false"
-        android:textColor="@color/preview_buttons_text_color"
-        android:textSize="@dimen/preview_buttons_text_size"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/preview_select_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|center_vertical"
+            android:paddingStart="@dimen/preview_deselect_padding_start"
+            android:background="@android:color/transparent"
+            android:drawableLeft="@drawable/preview_check"
+            android:drawableTint="@color/preview_default_blue"
+            android:textAllCaps="false"
+            android:text="@string/deselect"
+            android:textColor="@color/picker_default_white"
+            android:textSize="@dimen/preview_deselect_text_size" />
+
+        <Button
+            android:id="@+id/preview_add_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:backgroundTint="@color/preview_default_blue"
+            android:text="@string/add"
+            android:textAllCaps="false"
+            android:textColor="@color/preview_default_grey"
+            android:textSize="@dimen/preview_add_text_size"/>
+    </FrameLayout>
 </FrameLayout>
