--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,11 +19,15 @@
     <color name="clear_cache_icon_color">#5F6368</color>
 
     <!-- PhotoPicker -->
+    <color name="picker_default_white">@android:color/white</color>
+
+    <!-- PhotoPicker photo grid -->
     <color name="picker_primary_color">#1A73E8</color>
     <color name="picker_background_color">@android:color/white</color>
     <color name="picker_highlight_color">#E8F0FE</color>
 
     <!-- PhotoPicker Preview -->
-    <color name="preview_add_button_background_color">#8AB4F8</color>
-    <color name="preview_buttons_text_color">#202124</color>
+    <color name="preview_default_blue">#8AB4F8</color>
+    <color name="preview_default_grey">#202124</color>
+    <color name="preview_default_black">@android:color/black</color>
 </resources>
