--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -35,6 +35,8 @@
     <!-- PhotoPicker Preview -->
     <dimen name="preview_buttons_margin_horizontal">16dp</dimen>
     <dimen name="preview_buttons_margin_bottom">10dp</dimen>
-    <dimen name="preview_buttons_text_size">14sp</dimen>
-
+    <dimen name="preview_deselect_padding_start">2dp</dimen>
+    <!-- PhotoPicker Preview text -->
+    <dimen name="preview_add_text_size">14sp</dimen>
+    <dimen name="preview_deselect_text_size">16sp</dimen>
 </resources>
