--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -22,17 +22,22 @@
 
     <!-- PhotoPicker -->
     <dimen name="picker_photo_size">118dp</dimen>
+
     <dimen name="picker_bottom_bar_size">56dp</dimen>
     <dimen name="picker_bottom_bar_horizontal_gap">16dp</dimen>
     <dimen name="picker_bottom_bar_vertical_gap">10dp</dimen>
     <dimen name="picker_bottom_bar_elevation">8dp</dimen>
+
     <dimen name="picker_item_check_size">24dp</dimen>
     <dimen name="picker_item_check_margin">6dp</dimen>
     <dimen name="picker_item_badge_margin">5dp</dimen>
     <dimen name="picker_item_badge_text_margin">3dp</dimen>
     <dimen name="picker_item_badge_text_size">10dp</dimen>
+
     <dimen name="picker_date_header_height">56dp</dimen>
     <dimen name="picker_date_header_padding">16dp</dimen>
+
+    <dimen name="picker_photo_item_spacing">3dp</dimen>
 
     <!-- PhotoPicker Preview -->
     <dimen name="preview_buttons_margin_horizontal">16dp</dimen>
