--- a/res/drawable/ic_close.xml
+++ b/res/drawable/ic_close.xml
@@ -14,15 +14,13 @@
      limitations under the License.
 -->
 
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <style name="PickerDateHeader" parent="@android:style/TextAppearance.Material.Title">
-        <item name="android:textColor">@color/picker_date_header_text_color</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="PickerChipText" parent="@android:style/TextAppearance.Material.Title">
-        <item name="android:textSize">@dimen/picker_chip_text_size</item>
-    </style>
-
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportHeight="24"
+        android:viewportWidth="24"
+        android:tint="@color/picker_toolbar_icon_color">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12 19,6.41z"/>
+</vector>
