--- a/res/layout/fragment_picker_tab.xml
+++ b/res/layout/fragment_picker_tab.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="@dimen/picker_bottom_bar_horizontal_gap"
-            android:layout_gravity="left"
+            android:layout_gravity="start"
             android:paddingVertical="@dimen/picker_bottom_bar_vertical_gap"
             android:drawableLeft="@drawable/ic_view_selected"
             android:text="@string/picker_view_selected"
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="@dimen/picker_bottom_bar_horizontal_gap"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:paddingVertical="@dimen/picker_bottom_bar_vertical_gap"
             android:text="@string/add"
             android:textAllCaps="false"
