--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -56,9 +56,11 @@
         <item name="android:colorBackground">@color/picker_background_color</item>
 
         <!-- System | Widget section -->
-        <item name="android:statusBarColor">?android:colorBackground</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">?android:colorBackground</item>
-        <item name="android:windowBackground">?android:colorBackground</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
     </style>
 
 </resources>
