Add "Select up to max items" label for max selection
Bug: 192823495
Test: manual (video attached to the bug)
Change-Id: I3fde3ad7e02f20aa8221910a81aee06c0e6e0978

--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -26,5 +26,6 @@
     <color name="picker_date_header_text_color">@color/picker_default_white</color>
     <color name="picker_toolbar_icon_color">#E8EAED</color>
     <color name="picker_toolbar_chip_text_color">#E8EAED</color>
+    <color name="picker_message_text_color">#9AA0A6</color>
 
 </resources>
