--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="picker_background_color">@android:color/white</color>
     <color name="picker_highlight_color">#E8F0FE</color>
     <color name="picker_date_header_text_color">#3C4043</color>
+    <color name="picker_message_text_color">#5F6368</color>
     <color name="picker_toolbar_icon_color">#3C4043</color>
     <color name="picker_toolbar_chip_text_color">#5F6368</color>
     <color name="photos_item_gradient_color">#42000000</color>
