Add overlay gradient for photos grid's item
- Show the overylay gradient for check icon and badges
- Adjust the margin of the gif badge
- Add NonNull for some methods

Test: manual. screenshots on bug
Bug: 185800908
Change-Id: I9e00db2298419fd27641df3680e972807b1ec8e3

--- a/res/layout/item_photo_grid.xml
+++ b/res/layout/item_photo_grid.xml
@@ -41,13 +41,19 @@
                 android:scaleType="centerCrop"
                 android:contentDescription="@null"/>
 
+            <FrameLayout
+                android:id="@+id/overlay_gradient"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/picker_item_gradient_height"
+                android:background="@drawable/picker_item_gradient"/>
+
             <ImageView
                 android:id="@+id/icon_gif"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|top"
-                android:layout_marginEnd="@dimen/picker_item_badge_margin"
-                android:layout_marginTop="@dimen/picker_item_badge_margin"
+                android:layout_marginEnd="@dimen/picker_item_gif_badge_margin"
+                android:layout_marginTop="@dimen/picker_item_gif_badge_margin"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_gif"
                 android:contentDescription="@null"/>
