--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -28,6 +28,8 @@
     <color name="picker_date_header_text_color">#3C4043</color>
     <color name="picker_toolbar_icon_color">#3C4043</color>
     <color name="picker_toolbar_chip_text_color">#5F6368</color>
+    <color name="photos_item_gradient_color">#42000000</color>
+
 
     <!-- PhotoPicker Preview -->
     <color name="preview_default_blue">#8AB4F8</color>
