--- a/res/layout/fragment_picker_tab.xml
+++ b/res/layout/fragment_picker_tab.xml
@@ -20,8 +20,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-
+    <com.android.providers.media.photopicker.ui.AutoFitRecyclerView
         android:id="@+id/photo_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
